# codex

./: CMakeLists.txt  README.md
src/tsk1/: schema.sql  sltns.sql
src/tsk2/: order.txt  sltns.sql
src/tsk3/: sltns.js
src/tsk4/: sltns.js
src/tsk5/: order.js  sltns.js
src/tsk6/: fir.html  parser.js
